@@ -89,4 +89,15 @@ struct in6_addr
 };
 #endif
 
+#if defined(HAVE_INET_PTON) && defined(HAVE_INET_PTON_IPV6)
+#define ares_inet_pton(x,y,z) inet_pton(x,y,z)
+#else
+int ares_inet_pton(int af, const char *src, void *dst);
+#endif
+#if defined(HAVE_INET_NET_PTON) && defined(HAVE_INET_NET_PTON_IPV6)
+#define ares_inet_net_pton(w,x,y,z) inet_net_pton(w,x,y,z)
+#else
+int ares_inet_net_pton(int af, const char *src, void *dst, unsigned int size);
+#endif
+
 #endif /* ARES_SETUP_H */
